--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script type="FASTLY_REQUEST_PROPS">
+<script id="FASTLY_REQUEST_PROPS" type="application/json">
 <esi:include src="/__fastly_request_props">
   <esi:remove>{"customer_location":"unknown"}</esi:remove>
 </esi:include>
